--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,13 +1,13 @@
-header {
+/* header {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
+} */
 
-header img {
+/* header img {
   object-fit: contain;
   margin-bottom: 2rem;
   width: 11rem;
@@ -30,3 +30,13 @@ header h1 {
   color: #a39191;
   margin: 0;
 }
+
+@media (min-width: 768px) {
+  header {
+    margin-bottom: 4rem;
+  }
+
+  header h1 {
+    font-size: 2.25rem;
+  }
+} */
