--- a/src/index.css
+++ b/src/index.css
@@ -25,16 +25,6 @@ button:focus {
   outline: none;
 }
 
-@media (min-width: 768px) {
-  header {
-    margin-bottom: 4rem;
-  }
-
-  header h1 {
-    font-size: 2.25rem;
-  }
-}
-
 #auth-inputs {
   width: 100%;
   max-width: 28rem;
@@ -90,7 +80,7 @@ input.invalid {
   gap: 1rem;
 }
 
-.button {
+/* .button {
   padding: 1rem 2rem;
   font-weight: 600;
   text-transform: uppercase;
@@ -99,7 +89,7 @@ input.invalid {
   background-color: #f0b322;
   border-radius: 6px;
   border: none;
-}
+} */
 
 .button:hover {
   background-color: #f0920e;
